[tool.poetry]
name = "proxystr"
version = "2.0.5"
description = "Use a proxy as a string, but achieve broad functionality for various scenarios"
authors = ["MrSmith06 <sletars@gmail.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/BotsForge/proxystr"
homepage = "https://github.com/BotsForge/proxystr"
packages = [{include = "proxystr"}]

[tool.poetry.dependencies]
python = "^3.8"
pydantic = "^2.0"
httpx = "^0.27"
httpx-socks = "^0.9"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
